--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,11 @@ body {
   -o-object-fit: contain;
      object-fit: contain;
 }
+@media (max-width: 768px) {
+  .main-bg .mainImg {
+    height: 250px;
+  }
+}
 
 .typewriter {
   overflow: hidden;
