--- a/css/style.scss
+++ b/css/style.scss
@@ -247,6 +247,9 @@ body {
         width: 100%;
         height: 500px;
         object-fit: contain;
+        @media (max-width:768px) {
+            height: 250px;
+        }
     }
 }
 
